--- a/src/html/settings-aside.html
+++ b/src/html/settings-aside.html
@@ -4,16 +4,16 @@
    </div>
    <label class="label aside__label">
       <span>Пол:</span>
-      <div class="select aside__select">
+      <div id="select-sex"></div>
+      <!-- <div class="select aside__select">
          <button class="input select__btn select__btn_default">Не важно</button>
          <ul class="select__list">
             <li class="select__list-item" data-value="male">Не важно</li>
             <li class="select__list-item" data-value="male">Мужской</li>
             <li class="select__list-item" data-value="female">Женский</li>
          </ul>
-         <!-- для отправки формы -->
          <input class="select__input-hidden" type="text" name="sex" value="">
-      </div>
+      </div> -->
    </label>
    <label class="label aside__label">
       <span>Возраст:</span>
@@ -22,45 +22,16 @@
       </div>
    </label>
    <label class="label aside__label">
-      <span>Образование:</span> 
-      <div class="select aside__select">
-         <button class="input select__btn select__btn_default">Не важно</button>
-         <ul class="select__list">
-            <li class="select__list-item" data-value="male">Не важно</li>
-            <li class="select__list-item" data-value="male">Мужской</li>
-            <li class="select__list-item" data-value="female">Женский</li>
-         </ul>
-         <!-- для отправки формы -->
-         <input class="select__input-hidden" type="text" name="sex" value="">
-      </div>
+      <span>Образование:</span>
+      <div id="select-education"></div>
    </label>
    <label class="label aside__label">
       <span>Место жительства:</span>
-      <div class="select aside__select">
-         <button class="input select__btn select__btn_default">Не важно</button>
-         <ul class="select__list">
-            <!-- будут формироваться динамически от базы данных?  -->
-            <li class="select__list-item" data-value="male">Не важно</li>
-            <li class="select__list-item" data-value="male">Мужской</li>
-            <li class="select__list-item" data-value="female">Женский</li>
-         </ul>
-         <!-- для отправки формы -->
-         <input class="select__input-hidden" type="text" name="sex" value="">
-      </div>
+      <div id="select-residence"></div>
    </label>
    <label class="label aside__label">
       <span>Семейное положение:</span> 
-      <div class="select aside__select">
-         <button class="input select__btn select__btn_default">Не важно</button>
-         <ul class="select__list">
-            <li class="select__list-item" data-value="male">Не важно</li>
-            <li class="select__list-item" data-value="male">Разведен(а)</li>
-            <li class="select__list-item" data-value="female">Состоит в браке</li>
-            <li class="select__list-item" data-value="female">Не был(а) в браке</li>
-         </ul>
-         <!-- для отправки формы-->
-         <input class="select__input-hidden" type="text" name="sex" value="">
-      </div>
+      <div id="select-family-status"></div>
    </label>
    <label class="label aside__label">
       <span>Теги:</span> 
