--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
       @@include('html/settings-aside.html')
       @@include('html/main-table.html')
    </div>
+
+   <!-- модальные окна -->
+   @@include('html/modal-edit-respond.html')
+   @@include('html/modal-add-respond.html')
    <script src="js/script.min.js"></script>
 </body>
 </html>
