Верстка страницы настроек пользователя и проектов с календарем

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -10,20 +10,20 @@
    </div>
    <nav class="header__nav">
       <ul class="header__list">
-         <li class="header__item">
-            <a href="#" class="header__link">
+         <li class="header__item @@projects">
+            <a href="projects.html" class="header__link">
                <svg class="header__icon"><use xlink:href="img/icons/icons.svg#calendar"></use></svg>
                <span class="main-title header__nav-text">Проекты</span>
             </a>
          </li>
-         <li class="header__item header__item_active">
-            <a href="#" class="header__link">
+         <li class="header__item @@respondents">
+            <a href="index.html" class="header__link">
                <svg class="header__icon"><use xlink:href="img/icons/icons.svg#respondents"></use></svg>
                <span class="main-title header__nav-text">Респонденты</span>
             </a>
          </li>
-         <li class="header__item">
-            <a href="#" class="header__link">
+         <li class="header__item @@settings" >
+            <a href="settings.html" class="header__link">
                <svg class="header__icon"><use xlink:href="img/icons/icons.svg#settings"></use></svg>
                <span class="main-title header__nav-text">Настройки</span>
             </a>
