--- a/src/html/modals/modal-add-respond.html
+++ b/src/html/modals/modal-add-respond.html
@@ -1,7 +1,7 @@
-<div class="modal" data-modal-target="edit-respond">
+<div class="modal modal_respond" data-modal-target="add-respond">
    <div class="modal__body">
       <div class="modal__content">
-         <h3 class="modal__title">Редактировать респондента</h3>
+         <h3 class="modal__title">Добавить респондента</h3>
          <form class="modal__form" action="/" method="POST">
             <label class="modal__label">
                <span class="modal__input-name">ФИО</span>
@@ -39,7 +39,7 @@
             </label>
             <label class="modal__label">
                <span class="modal__input-name">Образование</span>
-               <div id="select-modal-education"></div>
+               <div id="select-modal-education-2"></div>
             </label>
             <label class="modal__label">
                <span class="modal__input-name">Место жительства</span>
@@ -47,7 +47,7 @@
             </label>
             <label class="modal__label">
                <span class="modal__input-name">Семейное положение</span>
-               <div id="select-modal-fs"></div>
+               <div id="select-modal-fs-2"></div>
             </label>
             <label class="modal__label">
                <span class="modal__input-name">Добавить тэги</span>
@@ -66,5 +66,4 @@
          </form>
       </div>
    </div>
-
 </div>
