--- a/src/html/modals/modal-new-project.html
+++ b/src/html/modals/modal-new-project.html
@@ -1,4 +1,4 @@
-<div class="modal" data-modal-target="add-respond">
+<div class="modal modal-new-project" data-modal-target="new-project">
    <div class="modal__body">
       <div class="modal__content">
          <h3 class="modal__title">Добавить респондента</h3>
@@ -66,5 +66,4 @@
          </form>
       </div>
    </div>
-
 </div>
