--- a/src/html/settings-aside.html
+++ b/src/html/settings-aside.html
@@ -1,11 +1,11 @@
-<aside class="aside">
-   <div class="aside__search">
+<aside class="settings-aside">
+   <div class="settings-aside__search">
       <input type="text" class="input input_search" placeholder="Поиск респондента">
    </div>
-   <label class="label aside__label">
+   <label class="label settings-aside__label">
       <span>Пол:</span>
       <div id="select-sex"></div>
-      <!-- <div class="select aside__select">
+      <!-- <div class="select settings-aside__select">
          <button class="input select__btn select__btn_default">Не важно</button>
          <ul class="select__list">
             <li class="select__list-item" data-value="male">Не важно</li>
@@ -15,37 +15,37 @@
          <input class="select__input-hidden" type="text" name="sex" value="">
       </div> -->
    </label>
-   <label class="label aside__label">
+   <label class="label settings-aside__label">
       <span>Возраст:</span>
-      <div class="select aside__select">
+      <div class="select settings-aside__select">
          прикол
       </div>
    </label>
-   <label class="label aside__label">
+   <label class="label settings-aside__label">
       <span>Образование:</span>
       <div id="select-education"></div>
    </label>
-   <label class="label aside__label">
+   <label class="label settings-aside__label">
       <span>Место жительства:</span>
       <div id="select-residence"></div>
    </label>
-   <label class="label aside__label">
+   <label class="label settings-aside__label">
       <span>Семейное положение:</span> 
       <div id="select-family-status"></div>
    </label>
-   <label class="label aside__label">
+   <label class="label settings-aside__label">
       <span>Теги:</span> 
       <!-- список формируется из данных с сервера -->
-      <div class="select aside__tags">
-         <ul class="aside__tag-wrapper">
-            <li><span class="tag tag_selected aside__tag">Есть дети</span></li>
-            <li><span class="tag aside__tag">Машина</span></li>
-            <li><span class="tag aside__tag">Дача</span></li>
-            <li><span class="tag aside__tag">Метеоролог</span></li>
-            <li><span class="tag aside__tag">Рыбалка</span></li>
-            <li><span class="tag aside__tag">Велосипед</span></li>
-            <li><span class="tag aside__tag">Рыбалка</span></li>
-            <li><span class="tag aside__tag">Велосипед</span></li>
+      <div class="select settings-aside__tags">
+         <ul class="settings-aside__tag-wrapper">
+            <li><span class="tag tag_selected settings-aside__tag">Есть дети</span></li>
+            <li><span class="tag settings-aside__tag">Машина</span></li>
+            <li><span class="tag settings-aside__tag">Дача</span></li>
+            <li><span class="tag settings-aside__tag">Метеоролог</span></li>
+            <li><span class="tag settings-aside__tag">Рыбалка</span></li>
+            <li><span class="tag settings-aside__tag">Велосипед</span></li>
+            <li><span class="tag settings-aside__tag">Рыбалка</span></li>
+            <li><span class="tag settings-aside__tag">Велосипед</span></li>
          </ul>
       </div>
    </label>
