последняя версия верстки

--- a/src/html/modals/modal-change-password.html
+++ b/src/html/modals/modal-change-password.html
@@ -15,7 +15,7 @@
                <span class="modal__input-name">Повторите пароль</span>
                <input class="input modal__input" type="password" name="phone" autocomplete="off" placeholder="Введите номер телефона">
             </label>
-            <div class="modal__btns">
+            <div class="modal__bottom-btns">
                <button class="button-reset button modal__btn modal__close" type="button" data-modal-close>Отмена</button>
                <button class="button-reset button modal__btn modal__ready" type="submit" disabled>Готово</button>
             </div>
