--- a/src/html/modals/modal-share-schedule.html
+++ b/src/html/modals/modal-share-schedule.html
@@ -11,7 +11,7 @@
                <span class="modal__input-name">Комментарий</span>
                <textarea class="input modal__textarea" name="comment" placeholder="Ваш комментарий"></textarea>
             </label>
-            <div class="modal__btns">
+            <div class="modal__bottom-btns">
                <button class="button-reset button modal__btn modal__close" type="button" data-modal-close>Отмена</button>
                <button class="button-reset button modal__btn modal__ready" type="submit" disabled>Готово</button>
             </div>
