--- a/src/html/account-settings.html
+++ b/src/html/account-settings.html
@@ -37,5 +37,5 @@
       </button>
    </div>
    <button class="button-reset account-settings__password" data-modal-btn="change-password">Изменить пароль</button>
-   <button class="button-reset button account-settings__logout">Выйти из системы</button>
+   <a href="login-page.html" class="button-reset button account-settings__logout">Выйти из системы</a>
 </aside>
