--- a/src/html/modals/modal-add-respond.html
+++ b/src/html/modals/modal-add-respond.html
@@ -18,12 +18,12 @@
             <div class="modal__label">
                <span class="modal__input-name">Пол</span>
                <div class="modal__some-inputs">
-                  <label class="checkbox modal__sex">
+                  <label class="checkbox modal__checkbox">
                      <span>Мужской</span>
                      <input class="visually-hidden checkbox__input" checked type="radio" name="sex" value="male">
                      <div class="checkbox__check"></div>
                   </label>
-                  <label class="checkbox modal__sex">
+                  <label class="checkbox modal__checkbox">
                      <span>Женский</span>
                      <input class="visually-hidden checkbox__input" type="radio" name="sex" value="female">
                      <div class="checkbox__check"></div>
@@ -32,7 +32,7 @@
             </div>
             <label class="modal__label">
                <span class="modal__input-name">Дата рождения / возраст</span>
-               <div class="modal__some-inputs modal__date">
+               <div class="modal__some-inputs modal_respond__date">
                   <input class="input modal__input" type="date" name="birthday-date" placeholder="Дата">
                   <input class="input modal__input" type="number" name="age" placeholder="0">
                </div>
@@ -51,15 +51,15 @@
             </label>
             <label class="modal__label">
                <span class="modal__input-name">Добавить тэги</span>
-               <div class="modal__some-inputs modal__tags-input">
+               <div class="modal__some-inputs modal_respond__tags-input">
                   <input class="input modal__input" type="text" name="name" autocomplete="off" placeholder="Название тэга">
-                  <button class="button-reset button modal__tag-btn" disabled type="button">
+                  <button class="button-reset button modal_respond__tag-btn" disabled type="button">
                      <svg><use xlink:href="img/icons/icons.svg#add"></use></svg>
                   </button>
                </div>
             </label>
 
-            <div class="modal__btns">
+            <div class="modal__bottom-btns">
                <button class="button-reset button modal__btn modal__close" type="button" data-modal-close>Отмена</button>
                <button class="button-reset button modal__btn modal__ready" type="submit">Готово</button>
             </div>
